--- a/config/llama3_2_1b_peoples_speech.toml
+++ b/config/llama3_2_1b_peoples_speech.toml
@@ -27,7 +27,7 @@ lr = 3e-4
 eps = 1e-8
 
 [lr_scheduler]
-warmup_steps = 15  # lr scheduler warm up
+warmup_steps = 500  # lr scheduler warm up
 decay_ratio = 0.2
 lr_min = 0.1
 
@@ -36,9 +36,9 @@ local_batch_size = 32
 global_batch_size = 1024
 seq_len = 1024
 max_norm = 1.0  # grad norm clipping
-steps = 1_000
+steps = 10_000
 compile = false
-dataset = "librispeech_asr_train" #"libri_light" # "Emilia-librilight"
+dataset = "peoples_speech" #"libri_light" # "Emilia-librilight"
 task = "a2a"
 
 [validation]
